--- a/charEmbedding.ipynb
+++ b/charEmbedding.ipynb
@@ -7,9 +7,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn\n",
-    "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence, pad_sequence\n",
-    "from models.networks import CNNEmbedding"
+    "from models.networks import CNNEmbedding\n",
+    "from models.utils import packCharsWithMask"
    ]
   },
   {
@@ -21,34 +20,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([3, 128])\n",
-      "torch.Size([3, 128])\n",
-      "torch.Size([3, 128])\n",
-      "torch.Size([3, 128])\n",
-      "torch.Size([3, 128])\n"
+      "Input\n",
+      "[[1 2 3 0 0]\n",
+      " [4 3 0 0 0]\n",
+      " [1 2 3 0 0]\n",
+      " [4 3 1 6 2]]\n",
+      "\n",
+      "Output\n",
+      "[[ 0.37057504  0.6678283   0.7527622 ]\n",
+      " [-0.3555143   0.10169128  0.437469  ]\n",
+      " [ 0.37057504  0.6678283   0.7527622 ]\n",
+      " [ 0.04258546  0.49077216  0.6276345 ]]\n"
      ]
     }
    ],
    "source": [
-    "NUM_CHARS = 93\n",
-    "EMBEDDING_DIM = 128\n",
+    "s1 = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 3],\n",
+    "    [5, 2, 2, 3],\n",
+    "]\n",
+    "\n",
+    "s2 = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 3, 1, 6, 2],\n",
+    "]\n",
+    "\n",
+    "NUM_CHARS = 7\n",
+    "EMBEDDING_DIM = 3\n",
     "    \n",
     "model = CNNEmbedding(NUM_CHARS, EMBEDDING_DIM)\n",
     "\n",
-    "# input shape [words chars]-> [words units]\n",
+    "x, mask = packCharsWithMask([s1, s2])\n",
+    "print(\"Input\")\n",
+    "print(x.data.numpy())\n",
     "\n",
-    "# input shape is [batch_size, words, chars] -> [b, w, u] with cnn\n",
-    "\n",
-    "u = []\n",
-    "for i in range(5):\n",
-    "    x = [[1, 2, 3, 4], [2,3,7], [2, 4, 1]]\n",
-    "    x = [torch.LongTensor(s) for s in x]\n",
-    "    x = pad_sequence(x, batch_first=True, padding_value=0)\n",
-    "    u.append(x)\n",
-    "\n",
-    "for sentence in u:\n",
-    "    y = model(sentence)\n",
-    "    print(y.shape)"
+    "with torch.no_grad():\n",
+    "    y = model(x, mask)\n",
+    "    \n",
+    "print(\"\\nOutput\")\n",
+    "print(y.data.numpy())"
    ]
   }
  ],
