batch first problem solved in cnnembedding

--- a/charEmbedding.ipynb
+++ b/charEmbedding.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence, pad_sequence\n",
     "from models.networks import CNNEmbedding\n",
     "from models.utils import packCharsWithMask"
    ]
@@ -20,17 +21,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input\n",
+      "Input (Packed)\n",
       "[[1 2 3 0 0]\n",
+      " [4 3 1 6 2]\n",
       " [4 3 0 0 0]\n",
       " [1 2 3 0 0]\n",
-      " [4 3 1 6 2]]\n",
+      " [5 2 2 3 0]]\n",
       "\n",
-      "Output\n",
-      "[[ 0.37057504  0.6678283   0.7527622 ]\n",
-      " [-0.3555143   0.10169128  0.437469  ]\n",
-      " [ 0.37057504  0.6678283   0.7527622 ]\n",
-      " [ 0.04258546  0.49077216  0.6276345 ]]\n"
+      "Mask\n",
+      "[[0 0 0 1 1]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 1 1 1]\n",
+      " [0 0 0 1 1]\n",
+      " [0 0 0 0 1]]\n",
+      "\n",
+      "Output (Packed)\n",
+      "[[ 0.8804787  -0.12565537  1.0057945 ]\n",
+      " [ 0.5860801   0.36556995  0.63799185]\n",
+      " [ 0.21783246 -0.20901467  0.31337976]\n",
+      " [ 0.8804787  -0.12565537  1.0057945 ]\n",
+      " [ 0.5940787   0.1700411   0.8562769 ]]\n",
+      "\n",
+      "Output (Padded)\n",
+      "[[[ 0.8804787  -0.12565537  1.0057945 ]\n",
+      "  [ 0.21783246 -0.20901467  0.31337976]\n",
+      "  [ 0.5940787   0.1700411   0.8562769 ]]\n",
+      "\n",
+      " [[ 0.5860801   0.36556995  0.63799185]\n",
+      "  [ 0.8804787  -0.12565537  1.0057945 ]\n",
+      "  [ 0.          0.          0.        ]]]\n"
      ]
     }
    ],
@@ -42,8 +61,8 @@
     "]\n",
     "\n",
     "s2 = [\n",
-    "    [1, 2, 3],\n",
     "    [4, 3, 1, 6, 2],\n",
+    "    [1, 2, 3],\n",
     "]\n",
     "\n",
     "NUM_CHARS = 7\n",
@@ -52,14 +71,22 @@
     "model = CNNEmbedding(NUM_CHARS, EMBEDDING_DIM)\n",
     "\n",
     "x, mask = packCharsWithMask([s1, s2])\n",
-    "print(\"Input\")\n",
+    "\n",
+    "print(\"Input (Packed)\")\n",
     "print(x.data.numpy())\n",
+    "\n",
+    "print(\"\\nMask\")\n",
+    "print(((mask.numpy() == -1e9) * 1)[...,0])\n",
     "\n",
     "with torch.no_grad():\n",
     "    y = model(x, mask)\n",
     "    \n",
-    "print(\"\\nOutput\")\n",
-    "print(y.data.numpy())"
+    "print(\"\\nOutput (Packed)\")\n",
+    "print(y.data.numpy())\n",
+    "\n",
+    "print(\"\\nOutput (Padded)\")\n",
+    "r, lengths = pad_packed_sequence(y)\n",
+    "print(r.permute(1, 0, 2).numpy())"
    ]
   }
  ],
