--- a/modelRun.ipynb
+++ b/modelRun.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "from models.networks import GlobalContextualDeepTransition\n",
+    "from models.networks import SequenceLabelingEncoder\n",
     "from models.utils import sample_sequence, pad_packed_sequence"
    ]
   },
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = GlobalContextualDeepTransition(INPUT_UNITS, ENCODER_UNITS, DECODER_UNITS, TRANSITION_LENGTH, OUTPUT_UNITS)\n",
+    "model = SequenceLabelingEncoder(INPUT_UNITS, ENCODER_UNITS, DECODER_UNITS, TRANSITION_LENGTH, OUTPUT_UNITS)\n",
     "seq, req = sample_sequence(INPUT_UNITS, LENGTHS)\n",
     "outputs = model(seq, req)"
    ]
@@ -47,26 +47,26 @@
      "output_type": "stream",
      "text": [
       "tensor([5, 3, 4, 2])\n",
-      "tensor([[[0.3607, 0.2622, 0.3771],\n",
-      "         [0.1129, 0.4447, 0.4424],\n",
-      "         [0.4100, 0.3693, 0.2207],\n",
-      "         [0.4938, 0.3382, 0.1680],\n",
-      "         [0.4703, 0.2745, 0.2552]],\n",
+      "tensor([[[0.3437, 0.3685, 0.2878],\n",
+      "         [0.2145, 0.4853, 0.3002],\n",
+      "         [0.4622, 0.4266, 0.1112],\n",
+      "         [0.1972, 0.3207, 0.4821],\n",
+      "         [0.1957, 0.2999, 0.5044]],\n",
       "\n",
-      "        [[0.3537, 0.4559, 0.1903],\n",
-      "         [0.3856, 0.1869, 0.4275],\n",
-      "         [0.5828, 0.1617, 0.2555],\n",
+      "        [[0.2811, 0.4882, 0.2307],\n",
+      "         [0.2446, 0.2037, 0.5517],\n",
+      "         [0.2068, 0.2617, 0.5315],\n",
       "         [0.0000, 0.0000, 0.0000],\n",
       "         [0.0000, 0.0000, 0.0000]],\n",
       "\n",
-      "        [[0.4115, 0.3041, 0.2844],\n",
-      "         [0.1522, 0.4710, 0.3769],\n",
-      "         [0.3236, 0.2290, 0.4473],\n",
-      "         [0.2705, 0.4538, 0.2757],\n",
+      "        [[0.4816, 0.1300, 0.3884],\n",
+      "         [0.2099, 0.2564, 0.5338],\n",
+      "         [0.1764, 0.3504, 0.4732],\n",
+      "         [0.4441, 0.4527, 0.1032],\n",
       "         [0.0000, 0.0000, 0.0000]],\n",
       "\n",
-      "        [[0.3240, 0.3408, 0.3352],\n",
-      "         [0.3646, 0.4096, 0.2258],\n",
+      "        [[0.2535, 0.4124, 0.3341],\n",
+      "         [0.4432, 0.1825, 0.3743],\n",
       "         [0.0000, 0.0000, 0.0000],\n",
       "         [0.0000, 0.0000, 0.0000],\n",
       "         [0.0000, 0.0000, 0.0000]]], grad_fn=<PermuteBackward>)\n"
