teacher enforcing training step added

--- a/wordEmbedding.ipynb
+++ b/wordEmbedding.ipynb
@@ -10,7 +10,9 @@
     "from torch import nn\n",
     "from models.utils import param, reverse_packed_sequence, Namespace, packCharsWithMask, pad_sequence, pad_packed_sequence, pack_padded_sequence\n",
     "from torch.nn.utils.rnn import PackedSequence\n",
-    "from models.networks import DeepTransitionRNN, CNNEmbedding, SequenceLabelingEncoder"
+    "from models.networks import GlobalContextualDeepTransition\n",
+    "import pytorch_lightning as pl\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -39,9 +41,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5]) torch.Size([5, 6]) torch.Size([5, 6, 1])\n",
+      "torch.Size([5]) torch.Size([5, 6]) torch.Size([5, 6, 1]) torch.Size([5, 17])\n",
       "lengths are:  [3, 2]\n",
-      "PackedSequence(data=tensor([2, 6, 3, 2, 1]), batch_sizes=tensor([2, 2, 1]), sorted_indices=tensor([0, 1]), unsorted_indices=tensor([0, 1]))\n"
+      "tensor([[0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "        [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])\n"
      ]
     }
    ],
@@ -72,9 +78,17 @@
     "w = [torch.LongTensor(s) for s in w]\n",
     "w = pad_sequence(w)\n",
     "w = pack_padded_sequence(w, l, enforce_sorted=False)\n",
-    "print(w.data.shape, x.data.shape, mask.shape)\n",
+    "\n",
+    "_, *args = w\n",
+    "m = w.data.size(0)\n",
+    "sparse = torch.randint(numTags, (m, ) )\n",
+    "targets = torch.zeros(m, numTags)\n",
+    "targets[torch.arange(m),sparse] = 1\n",
+    "targets = PackedSequence(targets, *args)\n",
+    "\n",
+    "print(w.data.shape, x.data.shape, mask.shape, targets.data.shape)\n",
     "print(\"lengths are: \", l)\n",
-    "print(w)"
+    "print(targets.data)"
    ]
   },
   {
@@ -86,98 +100,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5, 180])\n"
+      "2.930936098098755\n"
      ]
     }
    ],
    "source": [
-    "class GlobalContextualEncoder(nn.Module):\n",
-    "    def __init__(self, numChars, charEmbedding, numWords, wordEmbedding, outputUnits, transitionNumber):\n",
-    "        super().__init__()\n",
-    "        self.cnn = CNNEmbedding(numChars, charEmbedding)\n",
-    "        self.glove = nn.Embedding(numWords, wordEmbedding)\n",
-    "        \n",
-    "        encoderInputUnits = wordEmbedding + charEmbedding\n",
-    "        self.forwardEncoder  = DeepTransitionRNN(encoderInputUnits, outputUnits, transitionNumber)\n",
-    "        self.backwardEncoder = DeepTransitionRNN(encoderInputUnits, outputUnits, transitionNumber)\n",
-    "        \n",
-    "    def forward(self, words, chars, charMask):\n",
-    "        _, *args = words\n",
-    "        \n",
-    "        w = self.glove(words.data)\n",
-    "        c = self.cnn(chars, charMask)\n",
-    "        \n",
-    "        # word and char concat, pass through encoder and we get directional global context\n",
-    "        wc = torch.cat([w, c.data], dim=-1)\n",
-    "        forwardInput  = PackedSequence( wc, *args )\n",
-    "        forwardG  = self.forwardEncoder(forwardInput)\n",
-    "        \n",
-    "        backwardInput = reverse_packed_sequence(forwardInput)      \n",
-    "        backwardG = self.backwardEncoder(backwardInput)\n",
-    "        backwardG = reverse_packed_sequence(backwardG)\n",
-    "        \n",
-    "        nonDirectionalG = torch.cat([forwardG.data, backwardG.data], dim=-1)\n",
-    "        \n",
-    "        # mean pooling is done by padding with zeros, taking timewise sum and dividing by lengths\n",
-    "        nonDirectionalG = PackedSequence(nonDirectionalG, *args)\n",
-    "        nonDirectionalG, lens = pad_packed_sequence(nonDirectionalG)\n",
-    "        lens = torch.unsqueeze(torch.unsqueeze(lens, -1), 0)\n",
-    "        nonDirectionalG_sum = nonDirectionalG.sum(dim=0, keepdim=True)\n",
-    "        g = nonDirectionalG_sum / lens\n",
-    "        \n",
-    "        # need to broadcast g and concat with wc\n",
-    "        new_shape = [nonDirectionalG.data.shape[0] // g.shape[0]] + [-1] * (len(g.shape) - 1)\n",
-    "        g = pack_padded_sequence(g.expand(*new_shape), lens[0,:, 0])\n",
-    "        \n",
-    "        wcg = torch.cat([g.data, wc], dim=-1)\n",
-    "        wcg = PackedSequence(wcg, *args)\n",
-    "        return wcg\n",
-    "\n",
-    "    \n",
-    "model = GlobalContextualEncoder(numChars, charEmbedding, numWords, wordEmbedding, outputUnits, transitionNumber)\n",
-    "g = model(w, x, mask)\n",
-    "print(g.data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "180 180\n",
-      "torch.Size([3, 2, 17]) tensor([3, 2])\n"
-     ]
-    }
-   ],
-   "source": [
-    "class GlobalContextualDeepTransition(nn.Module):\n",
-    "    def __init__(self, numChars, charEmbedding, numWords,\n",
-    "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
-    "                        encoderUnits, decoderUnits, transitionNumber, numTags):\n",
-    "        super().__init__()\n",
-    "        self.contextEncoder = GlobalContextualEncoder(numChars, charEmbedding, numWords,\n",
-    "                                                          wordEmbedding, contextOutputUnits, contextTransitionNumber)\n",
-    "        self.labellerInput = wordEmbedding + charEmbedding + 2 * contextOutputUnits # units in g\n",
-    "        self.sequenceLabeller = SequenceLabelingEncoder(self.labellerInput, encoderUnits, decoderUnits, transitionNumber, numTags)\n",
-    "        \n",
-    "    def forward(self, words, chars, charMask):\n",
-    "        wcg = self.contextEncoder(words, chars, charMask)\n",
-    "        \n",
-    "        print(wcg.data.shape[-1], self.labellerInput)\n",
-    "        out = self.sequenceLabeller(wcg, reverse_packed_sequence(wcg))\n",
-    "        return out\n",
-    "\n",
     "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
     "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
-    "                        encoderUnits, decoderUnits, transitionNumber, numTags)\n",
-    "y = model(w, x, mask)\n",
-    "data, *args = y\n",
-    "y, lens = pad_packed_sequence(y)\n",
-    "print(y.shape, lens)"
+    "                        encoderUnits, numTags, transitionNumber)\n",
+    "\n",
+    "batch = w, x, mask, targets\n",
+    "loss = model.training_step(batch, 0)\n",
+    "\n",
+    "print(loss.item())"
    ]
   }
  ],
