correct length of sampler

--- a/loss.ipynb
+++ b/loss.ipynb
@@ -20,9 +20,8 @@
    "source": [
     "sourceName = 'data/conll03/eng.train.src'\n",
     "targetName = 'data/conll03/eng.train.trg'\n",
-    "data = NERDataset(sourceName, targetName)\n",
-    "data.numTags = 256\n",
-    "loader = data.getLoader(batch_size=283)"
+    "data = NERDataset(sourceName, targetName, 256)\n",
+    "loader = data.getLoader(4096)"
    ]
   },
   {
@@ -53,7 +52,7 @@
    "source": [
     "numChars = 100\n",
     "charEmbedding = 128\n",
-    "numWords = 23625\n",
+    "numWords = len(data.wordIdx)\n",
     "wordEmbedding = 300\n",
     "contextOutputUnits = 128\n",
     "contextTransitionNumber = transitionNumber = 5\n",
@@ -90,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adfd72959b7049f8a33b1e002734eeac",
+       "model_id": "446d48b4f5614f95b8b03167a6971c15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,14 +105,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "115142997.43122149\n"
+      "186841407.625\n"
      ]
     }
    ],
    "source": [
     "model = model.cuda()\n",
     "tot = 0\n",
+    "actual_len = 0\n",
     "for batch in tqdm(loader):\n",
+    "    actual_len += 1\n",
     "    words, chars, mask, targets = batch\n",
     "    batch = words.cuda(), chars.cuda(), mask.cuda(), targets.cuda()\n",
     "    loss = model.training_step(batch, 0)\n",
@@ -127,6 +128,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(actual_len, len(loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "{'avg': tensor(14.5019),\n",
@@ -135,7 +153,7 @@
        " 'min': tensor(1.)}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +179,7 @@
        "tensor(282.4460)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
