added layer norm and dropout

--- a/loss.ipynb
+++ b/loss.ipynb
@@ -32,10 +32,30 @@
     {
      "data": {
       "text/plain": [
-       "(23624, 23625)"
+       "65536"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "256 * 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23624, 23625)"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,30 +75,9 @@
     "numWords = len(data.wordIdx)\n",
     "wordEmbedding = 300\n",
     "contextOutputUnits = 128\n",
-    "contextTransitionNumber = transitionNumber = 5\n",
+    "contextTransitionNumber = transitionNumber = 4\n",
     "encoderUnits = 256\n",
     "decoderUnits = 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainable parameters: 7,440,256\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
-    "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
-    "                        encoderUnits, decoderUnits, transitionNumber)\n",
-    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\")"
    ]
   },
   {
@@ -87,9 +86,257 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainable parameters: 6,774,656\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
+    "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
+    "                        encoderUnits, decoderUnits, transitionNumber)\n",
+    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"Trainable parameters: {numParams:,}\")\n",
+    "# 6,774,656"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12800\n",
+      "49152\n",
+      "128\n",
+      "71168\n",
+      "71168\n",
+      "71168\n",
+      "54784\n",
+      "54784\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "71168\n",
+      "71168\n",
+      "71168\n",
+      "54784\n",
+      "54784\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "16384\n",
+      "16384\n",
+      "16384\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "128\n",
+      "240640\n",
+      "240640\n",
+      "240640\n",
+      "175104\n",
+      "175104\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "240640\n",
+      "240640\n",
+      "240640\n",
+      "175104\n",
+      "175104\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "196608\n",
+      "196608\n",
+      "196608\n",
+      "131072\n",
+      "131072\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "65536\n",
+      "65536\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "256\n",
+      "65536\n",
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x = model.parameters()\n",
+    "# y = model.state_dict().items()\n",
+    "\n",
+    "# for (key, value), par in zip(y, x):\n",
+    "#     if par.requires_grad:\n",
+    "#         print(par.numel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "446d48b4f5614f95b8b03167a6971c15",
+       "model_id": "f0eb4fceccaa499aa17f5f624189c5e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,88 +351,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "186841407.625\n"
+      "\n"
      ]
     }
    ],
    "source": [
     "model = model.cuda()\n",
     "tot = 0\n",
-    "actual_len = 0\n",
     "for batch in tqdm(loader):\n",
-    "    actual_len += 1\n",
     "    words, chars, mask, targets = batch\n",
     "    batch = words.cuda(), chars.cuda(), mask.cuda(), targets.cuda()\n",
     "    loss = model.training_step(batch, 0)\n",
-    "    tot += loss.item()\n",
-    "print(tot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 50\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(actual_len, len(loader))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'avg': tensor(14.5019),\n",
-       " 'std': tensor(11.6028),\n",
-       " 'max': tensor(113.),\n",
-       " 'min': tensor(1.)}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lens = torch.Tensor([len(s) for s in data.sentences])\n",
-    "{\n",
-    "    'avg': lens.mean(),\n",
-    "    'std': lens.std(),\n",
-    "    'max': lens.max(),\n",
-    "    'min': lens.min()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(282.4460)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "4096/lens.mean()"
+    "    tot += loss.item()"
    ]
   }
  ],
