added dropout and biases

--- a/loss.ipynb
+++ b/loss.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "sourceName = 'data/conll03/eng.train.src'\n",
     "targetName = 'data/conll03/eng.train.trg'\n",
-    "data = NERDataset(sourceName, targetName, 256)\n",
+    "data = NERDataset(sourceName, targetName)\n",
     "loader = data.getLoader(4096)"
    ]
   },
@@ -32,30 +32,10 @@
     {
      "data": {
       "text/plain": [
-       "65536"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "256 * 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "(23624, 23625)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,21 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trainable parameters: 6,774,656\n"
+      "Trainable parameters: 6,788,497\n"
      ]
     }
    ],
    "source": [
     "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
     "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
-    "                        encoderUnits, decoderUnits, transitionNumber)\n",
+    "                        encoderUnits, decoderUnits, transitionNumber, data.numTags)\n",
     "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "print(f\"Trainable parameters: {numParams:,}\")\n",
     "# 6,774,656"
@@ -104,221 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12800\n",
-      "49152\n",
-      "128\n",
-      "71168\n",
-      "71168\n",
-      "71168\n",
-      "54784\n",
-      "54784\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "71168\n",
-      "71168\n",
-      "71168\n",
-      "54784\n",
-      "54784\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "16384\n",
-      "16384\n",
-      "16384\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "128\n",
-      "240640\n",
-      "240640\n",
-      "240640\n",
-      "175104\n",
-      "175104\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "240640\n",
-      "240640\n",
-      "240640\n",
-      "175104\n",
-      "175104\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "196608\n",
-      "196608\n",
-      "196608\n",
-      "131072\n",
-      "131072\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "65536\n",
-      "65536\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "256\n",
-      "65536\n",
-      "256\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# x = model.parameters()\n",
     "# y = model.state_dict().items()\n",
@@ -330,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0eb4fceccaa499aa17f5f624189c5e6",
+       "model_id": "99dedccc0a194935a6c7fcff8849695e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,13 +124,30 @@
     }
    ],
    "source": [
-    "model = model.cuda()\n",
+    "model = model.putOnCuda()\n",
     "tot = 0\n",
     "for batch in tqdm(loader):\n",
     "    words, chars, mask, targets = batch\n",
     "    batch = words.cuda(), chars.cuda(), mask.cuda(), targets.cuda()\n",
     "    loss = model.training_step(batch, 0)\n",
     "    tot += loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total loss is 142.85319709777832\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Total loss is {tot}')"
    ]
   }
  ],
