model trainable now

--- a/train.ipynb
+++ b/train.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "from data.dataset import NERDataset\n",
     "from models.networks import GlobalContextualDeepTransition\n",
-    "from tqdm.notebook import tqdm\n",
-    "import torch"
+    "import pytorch_lightning as pl\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -20,7 +20,9 @@
    "source": [
     "sourceName = 'data/conll03/eng.train.src'\n",
     "targetName = 'data/conll03/eng.train.trg'\n",
-    "data = NERDataset(sourceName, targetName)\n",
+    "gloveFile = 'data/conll03/trimmed.300d.Cased.txt'\n",
+    "symbFile = 'data/conll03/sym.glove'\n",
+    "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "loader = data.getLoader(4096)"
    ]
   },
@@ -32,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "(23624, 23625)"
+       "(21387, 21388)"
       ]
      },
      "execution_count": 3,
@@ -69,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trainable parameters: 6,788,497\n"
+      "Trainable parameters: 6,788,797\n"
      ]
     }
    ],
@@ -77,77 +79,51 @@
     "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
     "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
     "                        encoderUnits, decoderUnits, transitionNumber, data.numTags)\n",
-    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\")\n",
-    "# 6,774,656"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = model.parameters()\n",
-    "# y = model.state_dict().items()\n",
     "\n",
-    "# for (key, value), par in zip(y, x):\n",
-    "#     if par.requires_grad:\n",
-    "#         print(par.numel())"
+    "# add glove weights here\n",
+    "model.init_weights(data.embeddingWeights)\n",
+    "\n",
+    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"Trainable parameters: {numParams:,}\") # 6,788,797"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name             | Type                           | Params\n",
+      "--------------------------------------------------------------------\n",
+      "0 | contextEncoder   | GlobalContextualEncoder        | 7 M   \n",
+      "1 | sequenceLabeller | SequenceLabelingEncoderDecoder | 5 M   \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99dedccc0a194935a6c7fcff8849695e",
+       "model_id": "3261b4d0460a4229b23549245ead01ff",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=50.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Training', layout=Layout(flex='2'), max…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
-    "model = model.putOnCuda()\n",
-    "tot = 0\n",
-    "for batch in tqdm(loader):\n",
-    "    words, chars, mask, targets = batch\n",
-    "    batch = words.cuda(), chars.cuda(), mask.cuda(), targets.cuda()\n",
-    "    loss = model.training_step(batch, 0)\n",
-    "    tot += loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total loss is 142.85319709777832\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Total loss is {tot}')"
+    "trainer = pl.Trainer(gradient_clip_val=5., gpus=1, max_epochs=1)\n",
+    "trainer.fit(model, loader)"
    ]
   }
  ],
