--- a/train.ipynb
+++ b/train.ipynb
@@ -109,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3261b4d0460a4229b23549245ead01ff",
+       "model_id": "55cdc8a0438643db95ea1f8673d4c7c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,6 +119,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pytorch_lightning\\utilities\\distributed.py:45: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
     },
     {
      "name": "stdout",
