--- a/train.ipynb
+++ b/train.ipynb
@@ -32,14 +32,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(21387, 21388)"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -68,10 +68,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Trainable parameters: 6,788,797\n"
+      "Trainable parameters: 7,313,341\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "model.init_weights(data.embeddingWeights)\n",
     "\n",
     "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\") # 6,788,797"
+    "print(f\"Trainable parameters: {numParams:,}\") # 6,788,797 but now 7,313,341 !"
    ]
   },
   {
@@ -93,8 +93,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "GPU available: True, used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
@@ -103,39 +103,19 @@
       "  | Name             | Type                           | Params\n",
       "--------------------------------------------------------------------\n",
       "0 | contextEncoder   | GlobalContextualEncoder        | 7 M   \n",
-      "1 | sequenceLabeller | SequenceLabelingEncoderDecoder | 5 M   \n"
+      "1 | sequenceLabeller | SequenceLabelingEncoderDecoder | 6 M   \n",
+      "Epoch 0: 100%|██████████| 50/50 [04:27<00:00,  5.35s/it, loss=1.010, v_num=15]\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f8130095b4f4895aad8fa2873972c74",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Training', layout=Layout(flex='2'), max…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -160,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
