added test dataset feature

--- a/train.ipynb
+++ b/train.ipynb
@@ -32,14 +32,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(21387, 21388)"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -68,8 +68,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Trainable parameters: 7,313,341\n"
      ]
@@ -93,8 +93,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "GPU available: True, used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
@@ -103,19 +103,47 @@
       "  | Name             | Type                           | Params\n",
       "--------------------------------------------------------------------\n",
       "0 | contextEncoder   | GlobalContextualEncoder        | 7 M   \n",
-      "1 | sequenceLabeller | SequenceLabelingEncoderDecoder | 6 M   \n",
-      "Epoch 0: 100%|██████████| 50/50 [04:31<00:00,  5.43s/it, loss=1.067, v_num=17]\n"
+      "1 | sequenceLabeller | SequenceLabelingEncoderDecoder | 6 M   \n"
      ]
     },
     {
-     "output_type": "execute_result",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7360dd2e8fb4236b82b87a7377c8a38",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Training', layout=Layout(flex='2'), max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pytorch_lightning\\utilities\\distributed.py:45: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "1"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
