--- a/test.ipynb
+++ b/test.ipynb
@@ -32,6 +32,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "testSrc = 'data/conll03/eng.testa.src'\n",
+    "testTrg = 'data/conll03/eng.testa.trg'\n",
+    "data.readTestFile(testSrc, testTrg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -55,8 +66,7 @@
     "                 wordEmbedding=wordEmbedding, contextOutputUnits=contextOutputUnits, contextTransitionNumber=contextTransitionNumber,\n",
     "                    encoderUnits=encoderUnits, decoderUnits=decoderUnits, transitionNumber=transitionNumber, numTags=data.numTags)\n",
     "model = GlobalContextualDeepTransition.load_from_checkpoint(prevCheckpointPath, **kwargs)\n",
-    "model.eval()\n",
-    "print()"
+    "model = model.eval()"
    ]
   },
   {
